force-app/main/default/objects/RD_ComponentMBDetail__c/RD_ComponentMBDetail__c.object-meta.xml
<CustomObject>
    <label>RD ComponentMBDetail</label>
    <nameField>
        <label>RD ComponentMBDetail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD ComponentMBDetail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>