force-app/main/default/objects/RD_ComponentMBDetail__c/fields/Inlet_Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Option_Code__c</fullName>
    <label>Inlet Option Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>