force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCDD__c.field-meta.xml
<CustomField>
    <fullName>MCDD__c</fullName>
    <label>MCDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>