force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCDP__c.field-meta.xml
<CustomField>
    <fullName>MCDP__c</fullName>
    <label>MCDP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>