force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCGR1__c.field-meta.xml
<CustomField>
    <fullName>MCGR1__c</fullName>
    <label>MCGR1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>