force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCGR2__c.field-meta.xml
<CustomField>
    <fullName>MCGR2__c</fullName>
    <label>MCGR2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>