force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCHT__c.field-meta.xml
<CustomField>
    <fullName>MCHT__c</fullName>
    <label>MCHT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>