force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCIG__c.field-meta.xml
<CustomField>
    <fullName>MCIG__c</fullName>
    <label>MCIG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>