force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCIL__c.field-meta.xml
<CustomField>
    <fullName>MCIL__c</fullName>
    <label>MCIL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>