force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCIR3__c.field-meta.xml
<CustomField>
    <fullName>MCIR3__c</fullName>
    <label>MCIR3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>