force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCOC__c.field-meta.xml
<CustomField>
    <fullName>MCOC__c</fullName>
    <label>MCOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>