force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCOR__c.field-meta.xml
<CustomField>
    <fullName>MCOR__c</fullName>
    <label>MCOR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>