force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCSS3__c.field-meta.xml
<CustomField>
    <fullName>MCSS3__c</fullName>
    <label>MCSS3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>