force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCVS1__c.field-meta.xml
<CustomField>
    <fullName>MCVS1__c</fullName>
    <label>MCVS1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>