force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCVS2__c.field-meta.xml
<CustomField>
    <fullName>MCVS2__c</fullName>
    <label>MCVS2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>