force-app/main/default/objects/RD_ComponentMBDetail__c/fields/MCVS3__c.field-meta.xml
<CustomField>
    <fullName>MCVS3__c</fullName>
    <label>MCVS3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>