force-app/main/default/objects/RD_ComponentMBDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Text1Val__c</columns>
    <columns>Text2Val__c</columns>
    <columns>Text3Val__c</columns>
    <columns>NumVal1__c</columns>
    <columns>NumVal2__c</columns>
    <columns>Type__c</columns>
    <columns>MCDT1__c</columns>
    <columns>MCDT2__c</columns>
    <columns>MCAR__c</columns>
    <columns>MCVS2__c</columns>
    <columns>MCVS3__c</columns>
    <columns>MCIG__c</columns>
    <columns>MCOG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Text1Val__c</field>
        <operation>equals</operation>
        <value>GFS</value>
    </filters>
    <filters>
        <field>Text2Val__c</field>
        <operation>equals</operation>
        <value>N</value>
    </filters>
    <label>All</label>
</ListView>